<resources>
    <string name="app_name">StarLists</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login_title">Welcome!</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="field_required">This field is required and cannot be left empty</string>
    <string name="invalid_email_format_warning">Invalid email address format.\nExample: username@domain.com</string>
    <string name="password_field_must_contain_letter_warning">Password must contain a letter.</string>
    <string name="password_field_must_contain_digit_warning">Password must contain at least one (1) digit.</string>
    <string name="password_field_must_contain_special_character_warning">Password must contain at least one (1) special character.\nExample: !@#$%^&amp;*()_+~`&lt;&gt;?:"{}[];\',./</string>
    <string name="password_field_must_meet_minimum_length_warning">Password must be at least eight (8) characters in length.</string>
    <string name="password_does_not_match">Passwords must match.</string>
    <string name="report_a_bug">Report a bug</string>

    <!-- "Report a Bug" activity -->

    <!-- Title label for the "Report a Bug" activity -->
    <string name="report_a_bug_title">Report a Bug</string>
    <!-- Label to report a bug -->
    <string name="report">Report</string>
    <!-- Instructions for reporting a bug -->
    <string name="report_a_bug_instructions">Please provide a description of the issue you encountered including steps to replicate:</string>
    <!-- Checkbox instructions for user to be contacted, if authorized, after reporting a bug if more information is needed -->
    <string name="report_a_bug_contact_authorization">By checking this box, I authorize representatives from this application to contact me for additional information about this issue if necessary.</string>
    <!-- Warning for when user attempts to submit an empty bug report -->
    <string name="bug_report_empty_warning">No information provided to submit.</string>
    <!-- Toast message for when a bug report was successfully submitted -->
    <string name="bug_report_submitted">Thank you for submitting feedback!\nReport has been sent.</string>
    <string name="email_password_cannot_be_empty_warning">Email and/or password cannot be left empty</string>
    <string name="email_password_incorrect">Email and/or password is incorrect</string>
    <string name="logout">Logout</string>
</resources>