<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/login_padding_horizontal"
        android:paddingTop="@dimen/login_padding_top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_title_margin_bottom"
            android:gravity="center"
            android:padding="@dimen/login_row_padding"
            android:text="@string/login_title"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_row_padding"
            android:hint="@string/email_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

        <TextView
            android:id="@+id/forgot_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/forgot_password_margin_bottom"
            android:text="@string/forgot_password"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

        <TextView
            android:id="@+id/sign_up_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />
    </LinearLayout>

    <ImageView
        android:id="@id/report_a_bug_button"
        android:layout_width="@dimen/bug_icon_size"
        android:layout_height="@dimen/bug_icon_size"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/bug_icon_margin"
        android:adjustViewBounds="true"
        android:background="#0000"
        android:contentDescription="@string/report_a_bug"
        android:scaleType="fitCenter"
        android:src="@drawable/bug"
        app:tint="?android:colorPrimary" />
</FrameLayout>