<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/report_a_bug_padding_horizontal"
    android:paddingTop="@dimen/report_a_bug_padding_top"
    tools:context=".BugReport.ReportABugActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/report_a_bug_title_margin_bottom"
        android:gravity="center"
        android:padding="@dimen/login_row_padding"
        android:text="@string/report_a_bug_title"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/report_a_bug_instructions" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_weight="1"
        android:inputType="textMultiLine"
        android:autofillHints="@null"
        android:layout_marginBottom="@dimen/report_a_bug_input_bottom_margin" />

    <CheckBox
        android:id="@+id/checkbox_cheese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_a_bug_contact_authorization" />

    <Button
        android:id="@+id/report_a_bug_button_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:text="@string/report"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

</LinearLayout>