<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegistrationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/registration_padding_top">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_title_margin_bottom"
                android:gravity="center"
                android:padding="@dimen/login_row_padding"
                android:text="@string/registration"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/registration_input_field_horizontal_margin"
                android:layout_marginVertical="@dimen/registration_input_field_vertical_margin"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_name_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/registration_input_field_vertical_margin"
                    android:layout_weight="1"
                    android:hint="@string/first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_name_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/last_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/registration_input_field_horizontal_margin"
                android:layout_marginBottom="@dimen/registration_input_field_vertical_margin"
                android:hint="@string/email_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/initial_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/registration_input_field_horizontal_margin"
                android:layout_marginBottom="@dimen/registration_input_field_vertical_margin"
                android:hint="@string/password_hint"
                app:errorIconDrawable="@null"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/initial_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_confirmed_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/registration_input_field_horizontal_margin"
                android:layout_marginBottom="@dimen/registration_input_field_vertical_margin"
                android:hint="@string/confirm_password"
                app:errorIconDrawable="@null"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/registration_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/registration_input_field_horizontal_margin"
                android:layout_marginBottom="@dimen/registration_input_field_vertical_margin"
                android:text="By checking this box, I agree to the Terms &amp; Conditions and Privacy Policy that I have thoroughly read" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/registration_margin_bottom"
                android:text="@string/register"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@id/report_a_bug_button"
        android:layout_width="@dimen/bug_icon_size"
        android:layout_height="@dimen/bug_icon_size"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/bug_icon_margin"
        android:adjustViewBounds="true"
        android:background="#0000"
        android:contentDescription="@string/report_a_bug"
        android:scaleType="fitCenter"
        android:src="@drawable/bug"
        app:tint="?android:colorPrimary" />

</FrameLayout>